  * adding function to create entry if doesn't exist when loading it
  * improving CK kernel version check
  * can now check minimal CK kernel version for any module (key "min_kernel_dep" in module cfg)
  * fixing bug when loading new module (replacing old cfg)
  * adding ck.type_long (set to long in Python 2.x and to int in Python 3.x) for compatibility

* V1.6.12
  * adding CK_PYTHON env variable in ck script 
    to let user select required python version (python or python3)
  * automatically detecting python3 or python on Linux
  * fixing license of a php OpenME code - now the same as CK
    (tiny part to connect PHP-based web requests to CK)
  * adding 'find' function to 'repo' module and changing
    default behavior. Now "ck find repo:<name>" returns
    path to repository rather than to meta. To return
    path to meta, use "ck find repo:<name> --meta".
    Closes ticket #45
  * automatically detecting server host and port, if used!
    Closes ticket #38
  * adding zip action to CK kernel, to simplify archiving of entries, 
    i.e. "$ ck zip (repo wildcards:)module wild cards:<data wild cards>"
  * when copying entry, changing date and CK version (fixing #39)

* V1.6.11
  * improved installation documentation

* V1.6.10
  * fixing automatic detection of an installation directory
    when using pip install --user
  * adding ChangeLog file for backward compatibility with Debian
  * adding TODO.txt with a link to CK GitHub tickets

* V1.6.9
  * fixing/improving command line help

* V1.6.8
  * moving ck and ck.bat to 'scripts' in setup.py
  * moving condarecipe to external sources 
    (to prepare conda packages externally)
  * using $PYTHON on Linux

* V1.6.7
  * fixing 755 for bin/ck (for PIP installation)

* V1.6.6
  * Fixing PIP problem (when adding new modules to CK)
  * Removing Debian description (will be separate to make non-native package)

* V1.6.5
  * fixing port selection from CMD for CK web service
    (ck start web --port={PORT})